# can_commsgen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  design.md  pixi.toml  pyproject.toml  schema.json
.ralph/: AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  loop.sh
.ralph/specs/: can-interface-generation.md  cpp-template-golden-sync.md  custom-gvl-name.md  packing-report.md  plc-generation.md  precommit-setup.md  rich-error-messages.md
.ralph/specs/_archive/2026-03-26_1429/: IMPLEMENTATION_PLAN.md  cli.md  cpp-generation.md  project-scaffolding.md  schema-model.md
.ralph/specs/_archive/2026-03-27_1200/: IMPLEMENTATION_PLAN.md
can_commsgen/: cli.py  cpp.py  plc.py  report.py  schema.py
can_commsgen/templates/cpp/: can_interface.cpp.j2  can_interface.hpp.j2  can_messages.hpp.j2
can_commsgen/templates/plc/: enum.st.j2  enum_from_int.st.j2  extract_bits.st.j2  gvl.st.j2  insert_bits.st.j2  main_input.st.j2  recv_fb.st.j2  send_fb.st.j2
tests/: conftest.py  test_cli.py  test_cpp_gen.py  test_integration.py  test_plc_gen.py  test_report_gen.py  test_schema.py
tests/cpp_roundtrip/: CMakeLists.txt  poll.h  unistd.h
tests/cpp_roundtrip/linux/: can.h
tests/cpp_roundtrip/net/: if.h
tests/cpp_roundtrip/sys/: ioctl.h  socket.h
tests/cpp_tests/: CMakeLists.txt  errno.h  poll.h  stub_state.h  test_can_interface.cpp  test_roundtrip.cpp  unistd.h
tests/cpp_tests/linux/: can.h
tests/cpp_tests/linux/can/: raw.h
tests/cpp_tests/net/: if.h
tests/cpp_tests/sys/: ioctl.h  socket.h
tests/fixtures/: example_schema.yaml
tests/golden/cpp/: can_interface.cpp  can_interface.hpp  can_messages.hpp
tests/golden/plc/: CAN_EXTRACT_BITS.st  CAN_INSERT_BITS.st  CAN_RECV.st  DRIVE_STATUS_SEND.st  DriveMode.st  DriveMode_FROM_INT.st  GVL.gvl.st  MOTOR_COMMAND_RECV.st  PC_STATE_RECV.st  main_input.st
tests/golden/report/: packing_report.txt
