[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "can_commsgen"
version = "0.1.0"
description = "CAN YAML schema to PLC Structured Text and C++ code generator"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "jinja2",
    "click",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[project.scripts]
can_commsgen = "can_commsgen.cli:main"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["can_commsgen"]
artifacts = ["schema.json"]

[tool.hatch.build.targets.wheel.force-include]
"schema.json" = "can_commsgen/schema.json"
