[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "can_commsgen"
version = "0.1.0"
description = "CAN YAML schema to PLC Structured Text and C++ code generator"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "jinja2",
    "click",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright",
    "pre-commit",
    "black",
    "isort",
]

[project.scripts]
can_commsgen = "can_commsgen.cli:main"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.hatch.build.targets.wheel]
packages = ["can_commsgen"]
artifacts = ["schema.json"]

[tool.hatch.build.targets.wheel.force-include]
"schema.json" = "can_commsgen/schema.json"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
    "TYPING",
]
default_section = "THIRDPARTY"
known_typing = ["typing", "mypy_extensions", "typing_extensions"]
force_sort_within_sections = "true"
force_to_top = "true"
src_paths = ["can_commsgen/**"]
